--- a/Phocation/Info.plist
+++ b/Phocation/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Phocation Photo Library Use</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Phocation Camera Use</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This App Requires Location Services</string>
 	<key>CFBundleDevelopmentRegion</key>
